# python_learn

./: .gitignore  README.md  pyproject.toml
src/: generators.py  processing.py  widget.py
src/masks/: __init__.py  decorators.py  generators.py  widget.py
tests/: test_masks.py  test_widget.py
